Translate intents.json via GitLocalize

--- a/translations/da-dk/intents.json
+++ b/translations/da-dk/intents.json
@@ -11,71 +11,71 @@
     "begynd lydoptagelse",
     "start lydoptagelse med navnet {name}",
     "start lydoptagelse {name}",
-    null,
+    "begynde at optage",
     "begynde at optage med navnet {name}",
-    null,
+    "begynde optagelsessessionen",
     "begynde at optage {name}",
     "påbegynd lydoptagelse med titlen {name}",
     "påbegynd lydoptagelse med navnet {name}",
-    null,
+    "begynde optagelsen",
     "påbegynd optagelsessession kaldet {name}",
     "start optagelsen med navnet {name}",
     "opret optagelse med navnet {name}",
-    null,
+    "initialisere optagelsen",
     "initialiser optagelse med titlen {name}",
-    null,
+    "starte en ny optagelse",
     "starte en lydoptagelse kaldet {name}",
     "start en lydoptagelse med navnet {name}",
-    null,
+    "starte lydoptagelse",
     "start lydoptagelse med navnet {name}",
     "start lydoptagelse med navnet {name}",
     "start lydoptagelse {name}",
-    null,
+    "starte optagelsen",
     "start optagelse med navnet {name}",
     "start optagelse under navnet {name}",
     "start optagelse {name}",
-    null,
+    "ny optagelse",
     "ny optagelse med navnet {name}",
-    null,
-    null,
+    "fortsæt med optagelsen",
+    "optage en ny lydfil",
     "optag en ny lydfil ved navn {name}",
-    null,
+    "optage lyd",
     "optag lyd som {name}",
     "optag lyd med navnet {name}",
-    null,
+    "optag lyd nu",
     "optag lyd nu med navnet {name}",
     "opsæt en ny optagelse med navnet {name}",
-    null,
+    "starte en ny lydoptagelse",
     "start en ny lydoptagelse kaldet {name}",
     "start en ny lydoptagelse ved navn {name}",
-    null,
+    "starte en ny optagelse",
     "start en ny optagelse kaldet {name}",
     "start en ny optagelse ved navn {name}",
     "start en ny optagelse med titlen {name}",
-    null,
+    "starte en optagelse",
     "start en optagelse kaldet {name}",
     "start en optagelse med navnet {name}",
-    null,
+    "starte en lydoptagelse",
     "start en lydoptagelse kaldet {name}",
     "start en lydoptagelse med navnet {name}",
-    null,
+    "start lydoptagelse nu",
     "start lydoptagelse nu som {name}",
     "start lydoptagelse nu med navnet {name}",
-    null,
+    "start lydoptagelse",
     "start lydoptagelse som {name}",
     "start lydoptagelse med navnet {name}",
-    null,
+    "start lydoptagelse venligst",
     "start lydoptagelse som {name}",
     "start lydoptagelse, kald venligst {name}",
-    null,
+    "begynde at optage",
     "start optagelse med det samme som {name}",
     "start optagelse med navnet {name}",
-    null,
+    "begynde at optage nu",
     "start optagelse nu som {name}",
     "start optagelse nu med navnet {name}",
-    null,
+    "start venligst optagelsen",
     "start optagelsen som {name}",
     "start optagelsen venligst navngivet {name}",
-    null
+    "begynde at optage med det samme"
   ]
 }
